<resources>
    <string name="app_name">OMH Storage demo</string>

    <string name="login_google">Login with Google</string>
    <string name="login_dropbox">Login with Dropbox</string>
    <string name="login_microsoft">Login with Microsoft</string>
    <string name="login_error">Login failed. Result code: %1$d, error message: %1$s</string>
    <string name="login_title">Login</string>

    <string name="file_viewer_title">File Viewer</string>
    <string name="loading">Loading…</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="empty_search">Couldn\'t find files matching the query</string>
    <string name="text_name">Name</string>
    <string name="text_swap_grid_linear">Swap Grid/Linear</string>
    <string name="text_create_file_title">Create File</string>
    <string name="text_download_error_title">Download Error</string>
    <string name="text_search">Search</string>
    <string name="text_download_error_message">There was an error during download process.\n\nPlease make sure the name of the file don\'t have special characters (for example ?, *, ", [, ], \').\n\nPlease go to your drive account and change the name of the file.</string>
    <string name="text_accept">Accept</string>
    <string name="text_file_name_label">File Name:</string>
    <string name="text_file_type_label">File Type:</string>
    <string name="text_upload_file_title">Upload File</string>
    <string name="text_upload">Upload</string>
    <string name="text_update_file_title">Update File</string>
    <string name="text_rename">Rename</string>
    <string name="text_update">Update</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_create">Create</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_metadata">Metadata</string>
    <string name="text_permissions">Permissions</string>
    <string name="text_versions">Versions</string>
    <string name="text_delete">Delete</string>
    <string name="text_permanently_delete">Permanently delete</string>
    <string name="text_options">Options</string>
    <string name="text_search_hint">Search by file name…</string>
    <string name="text_delete_dialog_title">Are you sure?</string>
    <string name="text_delete_dialog_message">This action cannot be undone. If you want to move file to trash, use regular delete.</string>
    <string name="text_show_original_metadata">Show original metadata</string>
    <string name="text_quota">Quota allocated: %s, used: %s</string>

    <string name="error_dialog_title">Something went wrong</string>
    <string name="error_dialog_message">Error detail:\n\n%s</string>
    <string name="error_dialog_ok">OK</string>
    <string name="error_missing_file_name">Please enter file name</string>
    <string name="error_no_file_selected">No file selected</string>
    <string name="file_name">File Name: %s</string>
    <string name="file_id">ID: %s</string>
    <string name="file_created_time">Created Time: %s</string>
    <string name="file_modified_time">Modified Time: %s</string>
    <string name="file_parent_id">Parent ID: %s</string>
    <string name="file_mime_type">Mime Type: %s</string>
    <string name="file_extension">Extension: %s</string>
    <string name="file_size">File Size: %s</string>
    <string name="folder_size">Folder Size: %s</string>

    <string name="versions_get_error">Couldn\'t get versions</string>
    <string name="metadata_get_error">Couldn\'t get metadata</string>

    <string name="permission_type_user">User</string>
    <string name="permission_type_group">Group</string>
    <string name="permission_type_domain">Domain</string>
    <string name="permission_type_anyone">Anyone</string>
    <string name="permission_type_device">Device</string>
    <string name="permission_type_application">Application</string>
    <string name="permission_label_id">ID</string>
    <string name="permission_label_display_name">Display name</string>
    <string name="permission_label_type">Type</string>
    <string name="permission_label_role">Role</string>
    <string name="permission_label_is_inherited">Inherited</string>
    <string name="permission_label_user_photo">User photo</string>
    <string name="permission_label_email">Email</string>
    <string name="permission_label_expiration_time">Expiration time</string>
    <string name="permission_label_deleted">User deleted</string>
    <string name="permission_label_pending_owner">Pending owner</string>
    <string name="permission_label_domain">Domain</string>
    <string name="permission_label_identity_id">Identity ID</string>
    <string name="permission_add">Add permission</string>
    <string name="permission_get_url">Get URL</string>
    <string name="permission_no_url">There is no URL</string>
    <string name="permission_no_url_dropbox_folder">There is no URL - provided only in Shared Folders</string>
    <string name="permission_url_copied">URL copied to clipboard</string>
    <string name="permission_url_to_file">URL to file</string>
    <string name="permission_url_error">Couldn\'t get url</string>
    <string name="permission_get_error">Couldn\'t get permissions</string>
    <string name="permission_removed">Permission removed</string>
    <string name="permission_remove_error">Couldn\'t remove permission</string>
    <string name="permission_updated">Permission updated</string>
    <string name="permission_update_error">Couldn\'t update permission</string>
    <string name="permission_created">Permission added</string>
    <string name="permission_create_error">Couldn\'t add permission</string>
    <string name="permission_role_required_error">Error: Role is required</string>
    <string name="permission_label_message">Optional email message</string>
    <string name="permission_label_send_notification_email">Send notification email</string>
    <string name="permission_email_required_error">A valid email is required.</string>
    <string name="permission_domain_required_error">Domain is required.</string>
    <string name="permission_caveats_label">Caveats</string>
    <string name="permission_caveats_dropbox">- Dropbox folders have two types: folder and shared folder.
\n- A folder must be a shared folder for Dropbox to provide permissions, including providing <i>OWNER</i> permission.
\n- Adding permission will make a folder a shared folder.
\n- <i>GET URL</i> only provides links for shared folders.
\n- Dropbox does not support granting a <i>WRITER</i> role to uploaded files. An exception will be thrown with user message: `You don’t have permission to perform this action.`.
\n- Dropbox does not support deleting inherited permissions.
    </string>

</resources>