<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Open Mobile Hub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/roleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_label_role"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

    <Spinner
            android:id="@+id/roleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="@+id/roleLabel"
            app:layout_constraintTop_toBottomOf="@+id/roleLabel" />

    <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            app:layout_constraintTop_toTopOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" />

    <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_update"
            app:layout_constraintTop_toBottomOf="@+id/roleSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>